--- a/scss/main.css
+++ b/scss/main.css
@@ -58,6 +58,12 @@ header .nav {
   align-items: center;
   gap: 32px;
 }
+header .nav .menu {
+  display: none;
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+}
 header .nav .nav-items {
   display: flex;
   align-items: center;
@@ -114,6 +120,7 @@ header .nav .nav-items #dark-light {
   display: flex;
   justify-content: space-between;
   padding-bottom: 114px;
+  gap: 32px;
 }
 .hero_cards .hero_card h1 {
   max-width: 518px;
@@ -169,6 +176,7 @@ header .nav .nav-items #dark-light {
   fill: #fff;
 }
 .hero_cards .hero_card img {
+  width: 100%;
   padding-top: 25px;
 }
 .hero_cards #play {
@@ -195,7 +203,8 @@ header .nav .nav-items #dark-light {
 .product .product_cards {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 45px;
   padding-bottom: 60px;
 }
@@ -220,10 +229,12 @@ header .nav .nav-items #dark-light {
   font-weight: 400;
   line-height: 26px; /* 162.5% */
 }
-.product .product-btn {
-  position: absolute;
-  left: 45%;
-  margin: auto;
+.product .product_btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product .product_btns .product-btn {
   border-radius: 4px;
   background: #02897a;
   color: #fff;
@@ -286,6 +297,9 @@ header .nav .nav-items #dark-light {
 .resources_cards .resources_card + .resources_card {
   padding-top: 150px;
 }
+.resources_cards .resources_card .r_img {
+  width: 100%;
+}
 
 .process {
   height: 100vh;
@@ -294,7 +308,11 @@ header .nav .nav-items #dark-light {
   background-size: 100% 80vh;
 }
 .process .process-content {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 32px;
 }
 .process .process-content h5 {
   color: #22343d;
@@ -327,9 +345,6 @@ header .nav .nav-items #dark-light {
   gap: 25px;
   row-gap: 24px;
   flex-wrap: wrap;
-  position: absolute;
-  left: 120px;
-  right: 120px;
 }
 .process .process_cards .process_card {
   height: 98px;
@@ -347,7 +362,7 @@ header .nav .nav-items #dark-light {
   padding: 15px 25px;
 }
 .process .process_btns {
-  padding-top: 300px;
+  padding-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -379,7 +394,7 @@ header .nav .nav-items #dark-light {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding: 145px 0 8px;
+  padding: 150px 0 8px;
 }
 .carousel .carousel-content p {
   color: #22343d;
@@ -662,12 +677,15 @@ header .nav .nav-items #dark-light {
   align-items: center;
 }
 .business .business-content .business_cards {
-  max-width: 968px;
+  width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 32px;
   background: #02897a;
+}
+.business .business-content .business_cards .business_card {
+  max-width: 550px;
 }
 .business .business-content .business_cards .business_card h6 {
   max-width: 510px;
@@ -719,6 +737,7 @@ footer .foot_cards {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  gap: 32px;
 }
 footer .foot_cards .site_links {
   display: flex;
@@ -777,7 +796,7 @@ footer .foot_cards .foot_card_content form input {
   background: #fff;
   outline: none;
 }
-footer .foot_cards .foot_card_content form button {
+footer .foot_cards .foot_card_content form .form_btn {
   display: inline-block;
   border-radius: 4px;
   background: #02897a;
@@ -791,4 +810,85 @@ footer .foot_cards .foot_card_content form button {
   padding: 8px 12px;
   border: none;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 1111px) {
+  .hero_card {
+    max-width: 50%;
+  }
+  .resources_cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (max-width: 999px) {
+  .nav-items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 25px;
+    position: fixed;
+    top: 70px;
+    left: -100%;
+    width: 100%;
+    height: calc(80vh - 50px);
+    background: #fff;
+    opacity: 0.95;
+    padding: 90px 0;
+    transition: all 0.3s ease-in-out;
+    z-index: 10;
+  }
+  #dark-light {
+    display: none;
+  }
+  #menu {
+    display: block;
+  }
+  .open .nav-items {
+    left: 0;
+  }
+  .open {
+    box-shadow: none;
+  }
+  .hero_cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+    flex-wrap: wrap;
+  }
+  .process_cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .business_cards {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 888px) {
+  .resources_card {
+    max-width: 400px;
+  }
+  .business_cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
+  .foot_cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .hero_card h1 {
+    width: 100%;
+    font-size: 32px;
+  }
 }/*# sourceMappingURL=main.css.map */
